--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><title>De'Heirs Agro-Industry - Tackling Food Scarcity | Plant, Sell, Export, Invest</title>
+    <title>De'Heirs Agro-Industry - Tackling Food Scarcity | Plant, Sell, Export, Invest</title>
 </title>
+<link rel="shortcut icon" href="logo.png" type="image/x-icon">
 <link
 href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 rel="stylesheet"
@@ -295,7 +296,7 @@ crossorigin="anonymous"
               <!-- Grid column -->
   
               <!-- Grid column -->
-               div
+              
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                 <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
                 <p><i class="fas fa-home me-3"></i> surulere, kabba, NIGERIA</p>
