--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De'Heirs Agro-Industry - Tackling Food Scarcity | Plant, Sell, Export, Invest</title>
 </title>
-<link rel="shortcut icon" href="logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 <link
 href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 rel="stylesheet"
