--- a/index2.html
+++ b/index2.html
@@ -41,17 +41,72 @@
         </div>
       </nav>
     </header>
-    <!-- end of navbar -->
-    <!-- home -->
-    <section id="banner">
-      <div class="banner-text">
-        <h1 style="text-align: center">
-          Welcome to the place where natural food and flavour are born
-        </h1>
+    <section id="skills">
+      <div class="tittle">
+        <div class="tittle-text">
+          <h1 style="color: #fff">skills</h1>
+          <div class="tittle-underline"></div>
+        </div>
+      </div>
+      <div class="skills-container">
+        <div class="skills-items">
+          <img
+            src="plant.jpg"
+            alt=""
+            style="width: 60px; height: 60px; color: rgb(25, 121, 25)"
+          />
+          <h1 style="color: #fff">WE PLANT</h1>
+          <p>
+            We plant seeds today, nurturing hope for a greener tomorrow. Each
+            seed carries the promise of life, growth, and transformation. What
+            we sow now shapes the future. Let’s cultivate change, one seed at a
+            time.
+          </p>
+        </div>
+        <div class="skills-items">
+          <img
+            src="sell.jpg"
+            alt=""
+            style="width: 60px; height: 60px; color: rgb(25, 121, 25)"
+          />
+          <h1 style="color: #fff">WE SELL</h1>
+          <p>
+            We sell fresh, high-quality farm produce, straight from our fields
+            to your table. Harvested with care, our products are natural,
+            nutritious, and packed with flavor. Taste the difference that comes
+            from farm-fresh goodness.
+          </p>
+        </div>
+        <div class="skills-items">
+          <img
+            src="export.jpg"
+            alt=""
+            style="width: 60px; height: 60px; color: rgb(25, 121, 25)"
+          />
+          <h1 style="color: #fff">WE DISTRIBUTE</h1>
+          <p>
+            We distribute fresh farm produce, ensuring quality delivery no
+            matter where you are. With us, distance is never an issue—our
+            produce reaches you, fresh and fast. Enjoy farm-to-door convenience
+            anywhere.
+          </p>
+        </div>
+        <div class="skills-items">
+          <img
+            src="s2.jpg"
+            alt=""
+            style="width: 60px; height: 60px; color: rgb(25, 121, 25)"
+          />
+          <h1 style="color: #fff">WE INVEST</h1>
+          <p>
+            We offer a unique opportunity for those who wish to invest in farm
+            produce. Partner with us and enjoy exclusive benefits while
+            supporting sustainable agriculture. Grow with us, and reap the
+            rewards!
+          </p>
+        </div>
       </div>
     </section>
-    <!-- end of home  -->
-    <!-- Footer -->
     <footer
       id="footer-contact"
       class="text-center text-lg-start bg-body-tertiary text-muted"
@@ -130,20 +185,10 @@
       </div>
       <!-- Copyright -->
     </footer>
-
-    <!-- Icon and Bootstrap Scripts -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-
-    <script>
-      
-    </script>
   </body>
+  <script>
+    document.querySelector(".hamburger").addEventListener("click", function () {
+      document.querySelector(".nav-links").classList.toggle("active");
+    });
+  </script>
 </html>
