--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
 
     <script>
       
+      document.querySelector(".hamburger").addEventListener("click", function () {
+  document.querySelector(".nav-links").classList.toggle("active");
+});
     </script>
   </body>
 </html>
