--- a/index3.html
+++ b/index3.html
@@ -30,7 +30,7 @@
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="index1.html">About</a></li>
-          <li><a href="index2.html">skills</a></li>
+          <li><a href="index2.html">Skills</a></li>
           <li><a href="index3.html">Services</a></li>
           <li><a href="index4.html">Contact</a></li>
         </ul>
@@ -225,6 +225,7 @@
     ></script>
 
     <script>
+        
         document.querySelector(".hamburger").addEventListener("click", function () {
   document.querySelector(".nav-links").classList.toggle("active");
 });
