--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@
     ></script>
 
     <script>
-      
-      document.querySelector(".hamburger").addEventListener("click", function () {
-  document.querySelector(".nav-links").classList.toggle("active");
-});
+      document
+        .querySelector(".hamburger")
+        .addEventListener("click", function () {
+          document.querySelector(".nav-links").classList.toggle("active");
+        });
     </script>
   </body>
 </html>
